--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ src="https://www.facebook.com/tr?id=563985342052523&ev=PageView&noscript=1"
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-10 text-center">
-            <h1>Você não vai acreditar no final dessa história <b>CLIQUE EM CONTINUAR</b> para ver agora!</h1>
+            <h1>Você não vai acreditar no poder dessa vitamina <b>CLIQUE EM CONTINUAR</b> para ver agora!</h1>
             <h4>Transformou Minha Vida E Recuperou Meu Corpo E Confiança...</h4>
           </div>
         </div>
