--- a/ps3/index.html
+++ b/ps3/index.html
@@ -42,7 +42,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-10 text-center">
-            <h1>Tecido anti gordura recém descoberto para <b>ACELERAR</b> o Metabolismo feminino</h1>
+            <h1> Vitamina produz tecido anti gordura recém descoberto que <b>ACELERA</b> o Metabolismo feminino</h1>
             <h4>Você pode fazer ainda hoje na sua casa. Aprenda como...</h4>
           </div>
         </div>
