--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@ t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
 fbq('init', '563985342052523');
-fbq('track', 'pressell');
+fbq('track', 'quiz');
 </script>
 <noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=563985342052523&ev=PageView&noscript=1"
+src="https://www.facebook.com/tr?id=563985342052523&ev=quiz&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
     
