--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@ src="https://www.facebook.com/tr?id=563985342052523&ev=quiz&noscript=1"
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-10 text-center">
-            <h1>Você não vai acreditar no poder dessa vitamina <b>CLIQUE EM CONTINUAR</b> para ver agora!</h1>
-            <h4>Transformou Minha Vida E Recuperou Meu Corpo E Confiança...</h4>
+            <h1>Pesquisa americana revela nova solução natural para a foliculite em homens <b>CLIQUE EM CONTINUAR</b> para ver agora!</h1>
+            <h4>Pedro Gomes (paciente) "Transformou Minha Vida E Me livrou dessa praga de vez..."</h4>
           </div>
         </div>
       </div>
@@ -72,9 +72,9 @@ src="https://www.facebook.com/tr?id=563985342052523&ev=quiz&noscript=1"
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-10 text-center">
-            <a href="https://comasaude.online/"><img class="img-fluid" src="play.png"></a>
+            <a href="https://eumaissaudavel.online/"><img class="img-fluid" src="play.png"></a>
             <!-- TROQUE SEU LINK ONDE ESTÁ O DO PROTOCOLOZEROBARRIGA.COM, MANTENDO AS ASPAS -->
-            <a class="btn btn-success btn-lg p-4 mt-5" href="https://comasaude.online/">QUERO ASSISIR O VÍDEO AGORA!</a>
+            <a class="btn btn-success btn-lg p-4 mt-5" href="https://eumaissaudavel.online/">DESCOBRIR RECEITA AGORA!</a>
           </div>
         </div>
       </div>
@@ -84,7 +84,7 @@ src="https://www.facebook.com/tr?id=563985342052523&ev=quiz&noscript=1"
       <div class="container">
         <div class="row justify-content-center">
           <div class="col text-center">
-            <a href="https://protocolozerobarriga.com/termos" class="text-white font-weight-bold">Termos de Uso</a> | <a href="https://protocolozerobarriga.com/privacidade" class="text-white font-weight-bold">Política de Privacidade</a>
+            <a href="https://eumaissaudavel.online/privacidade.html" class="text-white font-weight-bold">Termos de Uso</a> | <a href="https://eumaissaudavel.online/privacidade.html" class="text-white font-weight-bold">Política de Privacidade</a>
             <p class="font-weight-bold">Copyright 2022 - Todos os Direitos Reservados</p>
             <p>Este site não faz parte do site do Facebook ou Facebook Inc. Além disso,</p>
             <p class="mb-0">Este site NÃO é endossado pelo Facebook de forma alguma. FACEBOOK é uma marca registrada da FACEBOOK, Inc.</p>
