--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ src="https://www.facebook.com/tr?id=563985342052523&ev=quiz&noscript=1"
       <div class="container">
         <div class="row justify-content-center">
           <div class="col text-center">
-            <a href="https://eumaissaudavel.online/privacidade.html" class="text-white font-weight-bold">Termos de Uso</a> | <a href="https://eumaissaudavel.online/privacidade.html" class="text-white font-weight-bold">Política de Privacidade</a>
+            <a href="https://eumaissaudavel.online/privacidade.html" class="text-white font-weight-bold">Termos de Uso</a> | <a href="https://eumaissaudavel.online/termos.html" class="text-white font-weight-bold">Política de Privacidade</a>
             <p class="font-weight-bold">Copyright 2022 - Todos os Direitos Reservados</p>
             <p>Este site não faz parte do site do Facebook ou Facebook Inc. Além disso,</p>
             <p class="mb-0">Este site NÃO é endossado pelo Facebook de forma alguma. FACEBOOK é uma marca registrada da FACEBOOK, Inc.</p>
