--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@ t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
 fbq('init', '563985342052523');
-fbq('track', 'quiz');
+fbq('init', '1225450828258243');
+fbq('track', 'pressell');
 </script>
 <noscript><img height="1" width="1" style="display:none"
 src="https://www.facebook.com/tr?id=563985342052523&ev=quiz&noscript=1"
